--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
     </footer>
 
     <!-- #region menu -->
-    <div class="pop-up-menu is-open">
+    <div class="pop-up-menu">
       <div class="menu-container">
         <button type="button" class="pop-up-menu-close-button">
           <svg class="close-svg" width="8" height="8">
