--- a/index.html
+++ b/index.html
@@ -655,15 +655,17 @@
           </svg>
         </button>
 
-        <ul class="menu-nav-list">
-          <li>
-            <a href="./index.html" class="menu-nav-item menu-active-link"
-              >Studio</a
-            >
-          </li>
-          <li><a href="#" class="menu-nav-item">Portfolio</a></li>
-          <li><a href="#" class="menu-nav-item">Contacts</a></li>
-        </ul>
+        <nav>
+          <ul class="menu-nav-list">
+            <li>
+              <a href="./index.html" class="menu-nav-item menu-active-link"
+                >Studio</a
+              >
+            </li>
+            <li><a href="#" class="menu-nav-item">Portfolio</a></li>
+            <li><a href="#" class="menu-nav-item">Contacts</a></li>
+          </ul>
+        </nav>
 
         <address class="menu-contacts">
           <ul class="menu-contacts-list">
